fixed alignment for footer links

--- a/src/client/style.css
+++ b/src/client/style.css
@@ -328,32 +328,15 @@ margin-left: 7px;
 margin-bottom: 7px;
 
   }
-  .footerProductsLink{
-    color: aqua;
 
-margin-top: 100px;
-margin-left: 2px;
-margin-right: 1px;
-margin-bottom: 3px;
-padding: 2px;
-  border-radius: 25px;
-  border: 4px outset burlywood;
-  background-color: rgba(162, 208, 248, 0.473);
-  position: relative;
-  font-family: "Ropa Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 25px;
-  text-align: center;
-    }
-    .footerAccountLink{
-      color: aqua;
-margin-left: 2px;
-margin-top: 10px;
-margin-bottom: 10px;
-padding: 15px;
-  border-radius: 25px;
+.footerProductsLink {
+  color: aqua; 
+  margin-top: 100px;
+  margin-left: 2px;
   margin-right: 1px;
+  margin-bottom: 3px;
+  padding: 15px;
+  border-radius: 25px;
   border: 4px outset burlywood;
   background-color: rgba(162, 208, 248, 0.473);
   position: relative;
@@ -362,30 +345,46 @@ padding: 15px;
   font-style: normal;
   font-size: 25px;
   text-align: center;
-      }
+  
+}
 
-      .footerAdminLink{
-        color: aqua;
-        margin-left: 2px;
-        margin-bottom: 25px;
-        padding: 3px;
-        padding-top: 2.3px;
-        margin-right: 1px;
-        border-radius: 25px;
-        border: 4px outset burlywood;
-background-color: rgba(162, 208, 248, 0.473);
-position: relative;
+.footerAccountLink{
+  color: aqua;
+  margin-left: 2px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 1px;
+  padding: 15px;
+  border-radius: 25px; 
+  border: 4px outset burlywood;
+  background-color: rgba(162, 208, 248, 0.473);
+  position: relative;
   font-family: "Ropa Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 25px;
   text-align: center;
-        }
+}
 
-
+.footerAdminLink{
+  color: aqua;
+  margin-left: 2px;
+  margin-bottom: 25px;
+  padding: 15px; 
+  margin-right: 1px; 
+  border-radius: 25px;
+  border: 4px outset burlywood;
+  background-color: rgba(162, 208, 248, 0.473);
+  position: relative;
+  font-family: "Ropa Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 25px;
+  text-align: center;
+}
 
 .mediaIcon {
-width: 50px;
+  width: 50px;
   background-color:#fff;
   border:1px solid rgb(0, 0, 0);
   height:auto;
@@ -394,14 +393,13 @@ width: 50px;
 
 .footerLogoContainer{
   background-color:#fff;
-  border:1px solid rgb(27, 27, 27);
-
+  border:1px solid rgb(27, 27, 27); 
   border-radius:25%;
   width: 150px;
   height:150px;
-margin-top: 15px;
-margin-left: 15px;
-  }
+  margin-top: 15px;
+  margin-left: 15px;
+}
 
 
   /* account */
